All files ready to push

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,6 +37,11 @@
     <hr>
 
 
+    <p>
+        hey verulis
+    </p>
+
+
     <!-- Volunteer Registration Form -->
     <h2>Volunteer Register Form</h2>
     <fieldset>
